Correctly center data on mobile

--- a/frontend/css/global.scss
+++ b/frontend/css/global.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin: 0px 10px;
+  margin: 0px;
   font-family: 'Futura', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
